--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.21.6
 yarn_mappings=1.21.6+build.1
 loader_version=0.16.13
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 maven_group=top.diaoyugan
-archives_base_name=untitled
+archives_base_name=ghastling_plus
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.128.2+1.21.6
