--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,10 @@
 name: Build & Release Fabric Mod
 
 on:
-  workflow_dispatch: # 手动触发
+  workflow_dispatch:
   push:
     tags:
-      - 'v*' # 打 tag 时自动发布
+      - 'v*'
 
 jobs:
   build:
@@ -14,11 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 21
+          java-version: 17
 
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -43,19 +43,19 @@ jobs:
           VERSION=$(grep ^mod_version gradle.properties | cut -d'=' -f2)
           echo "mod_version=$VERSION" >> $GITHUB_OUTPUT
 
-      # 上传构建产物到 workflow artifact
+      # 上传构建产物到 workflow artifact（v4）
       - name: Upload Mod JAR as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: fabric-mod
           path: build/libs/*.jar
 
-      # 创建 Release，手动触发时使用 gradle.properties 的 mod_version
-      - name: Create or Update GitHub Release
-        uses: ncipollo/release-action@v1
+      # 创建或更新 Release（新版 ncipollo/release-action）
+      - name: Create Release
+        uses: ncipollo/release-action@v2
         with:
           tag: ${{ github.ref_name != '' && github.ref_name || steps.mod_version.outputs.mod_version }}
           name: Fabric Mod ${{ steps.mod_version.outputs.mod_version }}
-          files: build/libs/*.jar
+          artifacts: fabric-mod
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
