--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,11 +14,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 23
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 23
 
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -43,19 +43,21 @@ jobs:
           VERSION=$(grep ^mod_version gradle.properties | cut -d'=' -f2)
           echo "mod_version=$VERSION" >> $GITHUB_OUTPUT
 
-      # 上传构建产物到 workflow artifact（v4）
-      - name: Upload Mod JAR as Artifact
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: fabric-mod
+          name: veinmine-all.zip
           path: build/libs/*.jar
 
-      # 创建或更新 Release（新版 ncipollo/release-action）
       - name: Create Release
-        uses: ncipollo/release-action@v2
+        uses: softprops/action-gh-release@v1
         with:
-          tag: ${{ github.ref_name != '' && github.ref_name || steps.mod_version.outputs.mod_version }}
-          name: Fabric Mod ${{ steps.mod_version.outputs.mod_version }}
-          artifacts: fabric-mod
+          tag_name: ${{ github.ref_name }}
+          name: ${{ steps.extract-release-info.outputs.title }}
+          body: ${{ steps.extract-release-info.outputs.body }}
+          files: |
+            build/libs/*.jar
+            build/libs/*.json
+          draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
