--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,63 +1,69 @@
-name: Build & Release Fabric Mod
-
+name: Build and Release
 on:
-  workflow_dispatch:
+  workflow_dispatch: # 手动触发
   push:
     tags:
-      - 'v*'
+      - 'v*' # 打 tag 时自动发布
 
 jobs:
-  build:
+  build-and-release:
+    name: Build and Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
+      # 1. 拉取代码
+      - name: Checkout sources
+        uses: actions/checkout@v4
         with:
-          distribution: temurin
+          fetch-depth: 0
+
+      # 2. 设置 Java
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
           java-version: 23
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper/
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+      # 3. 给 gradlew 添加执行权限
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
 
-      # 构建项目
+      # 4. 设置 Gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
+      # 5. 清理旧缓存（可选）
+      - name: Clean old cache files
+        run: rm -rf ~/.gradle/caches/fabric-loom
+
+      # 6. 构建一次 Fabric Mod
       - name: Build Fabric Mod
-        run: |
-          chmod +x ./gradlew
-          ./gradlew build
+        run: ./gradlew build
 
-      # 读取 gradle.properties 的 mod_version
-      - name: Get mod version
-        id: mod_version
+      # 7. 读取 gradle.properties 的 mod_version
+      - name: Get mod version from gradle.properties
+        id: get_mod_version
         run: |
-          VERSION=$(grep ^mod_version gradle.properties | cut -d'=' -f2)
-          echo "mod_version=$VERSION" >> $GITHUB_OUTPUT
+          MOD_VERSION=$(grep ^mod_version gradle.properties | cut -d'=' -f2)
+          echo "mod_version=$MOD_VERSION" >> $GITHUB_OUTPUT
 
+      # 8. 上传构建产物到 workflow artifact
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: veinmine-all.zip
+          name: fabric-mod
           path: build/libs/*.jar
 
+      # 9. 创建或更新 Release，标题用版本号
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          name: ${{ steps.extract-release-info.outputs.title }}
-          body: ${{ steps.extract-release-info.outputs.body }}
-          files: |
-            build/libs/*.jar
-            build/libs/*.json
+          tag_name: ${{ github.ref_name != '' && github.ref_name || steps.get_mod_version.outputs.mod_version }}
+          name: Fabric Mod ${{ steps.get_mod_version.outputs.mod_version }}
+          body: "Release of Fabric Mod version ${{ steps.get_mod_version.outputs.mod_version }}"
+          files: build/libs/*.jar
           draft: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
