--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.21.6
 yarn_mappings=1.21.6+build.1
 loader_version=0.16.13
 # Mod Properties
-mod_version=1.1.1-dev
+mod_version=1.1.1
 maven_group=top.diaoyugan
 archives_base_name=GhastlingPlus
 # Dependencies
